--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start": "react-scripts start",
     "server": "cd ./backend && npm run dev",
     "build": "react-scripts build",
-    "prodbuid": "cd ./backend && npm run buildui",
+    "prodbuild": "cd ./backend && npm run buildui",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
